# Device

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AbstractAPI.h  Algorithms.h  CMakeLists.txt  ClassedAPI.cpp  ClassedAPI.h  DataTypes.h  DeviceMacros.h  LICENSE  README.md  UsmAllocator.h  amd.cmake  api_testing.cpp  cuda.cmake  device.cpp  device.h  hip.cmake  nvidia.cmake  omptarget.cmake  sycl.cmake
.github/workflows/: test.yml
Refactoring/: AbstractAPI.h  AbstractInterface.h  CMakeLists.txt  device.cpp  device.h
Refactoring/examples/: CMakeLists.txt  basic.cpp  gemm.cpp  main.cpp
Refactoring/interfaces/cuda/: Aux.cu  ComputeAddressing.h  Control.cu  Copy.cu  CopyAddScale.cu  CudaInterface.h  CudaWrappedAPI.h  Gemm.cu  Internals.cu  Internals.h  Memory.cu  Statistics.h  Streams.cu
Refactoring/interfaces/dummy/: DummyInterface.cpp
algorithms/: Common.h  Dummy.cpp
algorithms/cuda/: ArrayManip.cu  BatchManip.cu  Debugging.cu  Reduction.cpp  Reduction.cu  Reduction.h
algorithms/cudahip/: ArrayManip.cpp  BatchManip.cpp  Debugging.cpp  LocalCommon.h  Reduction.cpp
algorithms/generic/: Reduction.cpp
algorithms/hip/: ArrayManip.cpp  BatchManip.cpp  Debugging.cpp  Reduction.cpp  Reduction.h
algorithms/omptarget/: ArrayManip.cpp  BatchManip.cpp  Reduction.cpp
algorithms/sycl/: ArrayManip.cpp  BatchManip.cpp  Debugging.cpp  Reduction.cpp  Reduction_ONEAPI.cpp
cmake/: FindDpcppFlags.cmake  FindIntelMPI.cmake  FindNVToolsExt.cmake  FindOmpTargetFlags.cmake  FindOpenSYCLSettings.cmake  FindOpenSyclConfig.cmake  find-dpcpp.py  find-opensycl.py
cuda/: CMakeLists.txt
cuda/src/: StreamManager.cpp  StreamManager.h  auxiliary.cu  common.h  device_utils.cu  device_utils.h  gemm.cu  memory_menagment.cu  scratch_mem_system.cu  scratch_mem_system.h  temporary_mem_menager.cu
deprecated/: CMakeLists.txt  device_api_example.cpp
deprecated/cuda/: CMakeLists.txt
deprecated/cuda/src/: StreamManager.cu  device_query.cu  gemm.cu  memory_menagment.cu  temporary_mem_menager.cu  temporary_mem_menager.h
deprecated/tests/aux/: helper.h
deprecated/tests/unit_tests/copy_add_scale/: copy_add_scale_driver.cpp
deprecated/tests/unit_tests/multiple_gemms/: multiple_gemms.cpp
deprecated/tests/unit_tests/single_gemms/: single_gemm_driver.cpp  single_gemm_driver.h
examples/: CMakeLists.txt  Common.h  basic.cpp  gemm.cpp  streams.cpp
examples/basic/: CMakeLists.txt  basic.cpp  common.h
examples/cmake/: common_options.cmake
examples/jacobi/: CMakeLists.txt  README.md
examples/jacobi/aux-scripts/: build_intel_devcloud_fpga.sh  run_intel_devcloud_fpga.sh
examples/jacobi/input/: example.yaml
examples/jacobi/src/: datatypes.hpp  helper.hpp  main.cpp  matrix_manip.cpp  matrix_manip.hpp  simpleDatatypes.hpp  solvers.hpp
examples/jacobi/src/gpu/: solver.cpp
examples/jacobi/src/gpu/kernels/: CMakeLists.txt  amd.cmake  cuda.cmake  hip.cmake  subroutinesCUDA.cu  subroutinesGPU.h  subroutinesHIP.cpp  subroutinesONEAPI.cpp  sycl.cmake
examples/jacobi/src/host/: solver.cpp  subroutines.cpp  subroutines.hpp
examples/jacobi/tests/: driver.cpp
examples/jacobi/tests/gpu/: subroutines_tests.cpp
examples/jacobi/tests/host/: matrix_init.cpp  matrix_subroutines.cpp  vectors_tests.cpp
examples/mpi/: CMakeLists.txt  README.md
examples/mpi/src/: main.cpp
interfaces/common/: Common.h  Status.h
interfaces/cuda/: Aux.cu  ComputeAddressing.cu  ComputeAddressing.h  Control.cu  Copy.cu  CopyAddScale.cu  CudaWrappedAPI.h  Events.cu  Gemm.cu  Gemm.cuh  GemmLauncher.cu  Graphs.cu  Internals.cu  Internals.h  Interop.cu  Memory.cu  Statistics.h  Streams.cu
interfaces/dummy/: DummyInterface.h
interfaces/hip/: Aux.cpp  Control.cpp  Copy.cpp  Events.cpp  Graphs.cpp  HipWrappedAPI.h  Internals.cpp  Internals.h  Interop.cpp  Memory.cpp  Statistics.h  Streams.cpp
interfaces/omptarget/: OMPTargetWrappedAPI.h
interfaces/sycl/: Aux.cpp  Control.cpp  Copy.cpp  DeviceCircularQueueBuffer.cpp  DeviceCircularQueueBuffer.h  DeviceContext.cpp  DeviceContext.h  DeviceStack.cpp  DeviceStack.h  DeviceType.cpp  DeviceType.h  Events.cpp  Graphs.cpp  Internals.h  Memory.cpp  Statistics.h  Streams.cpp  SyclWrappedAPI.h
kernels/cuda/: Plasticity.cu  Plasticity.h
tests/: BaseTestSuite.h  CMakeLists.txt  array_manip.cpp  batch_manip.cpp  main.cpp  memory.cpp  reductions.cpp
tests/aux/: helper.cpp
tests/performance/: main.cpp  single_gemm_driver.cpp  single_gemm_driver.h
tests/unit_tests/: main.cpp
tests/unit_tests/copy_add_scale/: copy_add_scale.cpp  copy_add_scale_driver.h
tests/unit_tests/multiple_gemms/: multiple_gemm_driver.cpp  multiple_gemm_driver.h
tests/unit_tests/single_gemms/: single_gemm_nn.cpp  single_gemm_nt.cpp  single_gemm_tn.cpp  single_gemm_tt.cpp
